#16 - spring boot configuration processor 디펜던시 추가
사용자 정의 application property를 ide에서 편하게 사용하기 위해 사용

--- a/project-board/build.gradle
+++ b/project-board/build.gradle
@@ -48,6 +48,9 @@ dependencies {
 
     // 템플릿엔지
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+    // configuration processor
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 }
 
 tasks.named('test') {
