#16 - 스프링 시큐리티 디펜던시 추가
인증 구현때 추가하려 했는데 로그인 페이지 간단히 구현하기 위해 추가

--- a/project-board/build.gradle
+++ b/project-board/build.gradle
@@ -51,6 +51,9 @@ dependencies {
 
     // configuration processor
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 }
 
 tasks.named('test') {
