#45 - Swagger UI 적용
* 간단한 의존성 추가만으로 즉시 swagger로 문서화가 가능함.
* Spring Data Rest 가 자동으로 만들어 준 api를
스웨거에 노출시키기 위해 추가 의존성을 사용함

--- a/project-board/build.gradle
+++ b/project-board/build.gradle
@@ -59,6 +59,11 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+
+    // Swagger Ui
+    implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
+    implementation 'org.springdoc:springdoc-openapi-data-rest:1.6.12'
+    annotationProcessor 'com.github.therapi:therapi-runtime-javadoc-scribe:0.15.0'
 }
 
 tasks.named('test') {
