#42 - application.yml 민감정보 변수로 적용
기존에 .env 파일에 민감정보를 저장해놓고 사용했는데, 실제 배포 환경에 적용하기 위해 환경변수 또는 환경변수로 민감정보를 주입하도록 변경하였다.

--- a/project-board/src/main/resources/application.yml
+++ b/project-board/src/main/resources/application.yml
@@ -8,11 +8,8 @@ logging:
     org.hibernate.type.descriptor.sql.BasicBinder: trace
 
 spring:
-  config:
-    import: optional:file:.env[.properties]
-
   datasource:
-    url: jdbc:postgresql://localhost:${LOCAL_DB_PORT}/board
+    url: ${LOCAL_DB_URL}
     username: ${LOCAL_DB_USERNAME}
     password: ${LOCAL_DB_PASSWORD}
   jpa:
